i18n/zh-cn/docusaurus-plugin-content-docs/version-6.0/tutorial/oryx.md
---
title: Oryx
sidebar_label: Oryx
hide_title: false
hide_table_of_contents: false
---

# Oryx

Oryx(SRS Stack)，面向鼠标编程，没有服务器和命令行经验，也可以构建自己的在线视频服务。入门的最佳推荐。

Oryx是一个开源的音视频服务方案，多个音视频场景中开箱即用，组合使用了SRS、FFmpeg、WebRTC等项目，无门槛赋能小微企业，让小微企业轻松具备数字化能力。

Oryx：让音视频的力量，赋能所有小微企业。

## 24/7 Live Stream: Easy Stream Your Camera to YouTube with DDNS & VPS - No PC or OBS Required!

https://youtu.be/JMz68_wuVvM

在本逐步教程中，探索如何使用DDNS和VPS轻松地将您的摄像头24/7实时流式传输到YouTube。告别使用PC或OBS的需求，享受更稳定、
无缝的直播体验。

## Ultimate Unmanned Live Streaming Solution: Easy, Affordable & No PC Required! Perfect for Slow Media, Sleep Music, ASMR, Movie Streaming & More!

https://youtu.be/CjXkRmNRtHA

无人直播终极方案，简单、便宜、不占用电脑，自媒体慢直播、无人直播带货、睡眠音乐直播、ASMR直播、电影直播等必备方案

## Oryx：起步、购买和入门
* 地址: https://www.bilibili.com/video/BV1844y1L7dL
* 说明: 如何购买Oryx？如何使用云厂商的镜像一键部署Oryx？如何在宝塔或aaPanel中安装Oryx？如何设置防火墙和安全组？

## Oryx：音视频无门槛赋能小微企业
* 地址: https://www.bilibili.com/video/BV1cq4y1e7Au
* 说明: 什么是Oryx？为何要做Oryx？Oryx可以带来什么价值？Oryx适用哪些用户和场景？

## Oryx：直播录制和多平台转播
* 地址: https://www.bilibili.com/video/BV1KY411V7uc
* 说明: 如何使用Oryx实现多平台直播，比如同时在视频号、B站和快手直播，同时不增加上行带宽。上行带宽增加会增加推流卡顿的风险，导致直播翻车。

## 周亮：自建CDN的高质量源站
* 地址: https://www.bilibili.com/video/BV1gT4y1U76d
* 说明: 构建自己的高质量源站，BGP带宽支持不同运营商回源，专线带宽有保障，可实现源站的录制和转推等业务能力。  

## 唐为：Oryx解决二手货交易的信任问题
* 地址: https://www.bilibili.com/video/BV14S4y1k7gr
* 说明: 二手货电商中，买家不能确定货物是否有质量问题，也不能确定是货物本身还是运输导致的问题，Oryx直播和录制可以让这个过程“眼见为实”。

## Oryx：如何让村晚直播实现远程制作
* 地址: https://www.bilibili.com/video/BV1Nb4y1t7ij
* 说明: “村晚”就是每个村的晚会，丰富了广大人民的生活。村晚节目在现场直播时，需要对节目再进行处理，加台标和加效果，然后再播出。Oryx让节目可以远程制作，让村晚更便捷。      
    
## 王大江：Oryx多种场景应用
* 地址: https://www.bilibili.com/video/BV16r4y1q7ZT
* 说明: Oryx面向鼠标编程，让每个人都能做音视频业务。不懂音视频的可以，懂音视频的也可以，种地的可以，撸网线的可以，剪电影的可以，背摄像机的也可以，跳舞的可以，唱歌的可以，卖二手货的也可以，开源项目交流也可以，多平台直播也可以，会用电脑有微信就可以，守法公民都可以。    
      
## 崔国栋：如何用Oryx的SRT实现300ms低延迟直播
* 地址: https://www.bilibili.com/video/BV1aS4y1G7iG
* 说明: 在直播推流和编码器中，除了RTMP，SRT是支持得很普及的协议。配合Oryx，我们使用SRT可以做到300ms左右延迟，实现真正秒内的低延迟直播。

## 徐光磊：如何用Oryx搭建私人专享直播间
* 地址: https://www.bilibili.com/video/BV1RS4y1G7tb
* 说明: 如何一键快速拥有自己的私人直播间，而且带有公网IP，可以任何地方都能访问，用任何设备都能访问，实现自己的私人的专享的直播间。

## 程晓龙：Oryx如何一键HTTPS
* 地址: https://www.bilibili.com/video/BV1tZ4y1R7qp
* 说明: Oryx面向鼠标编程，让每个人都能做音视频业务。不懂音视频的可以，懂音视频的也可以，种地的可以，撸网线的可以，剪电影的可以，背摄像机的也可以，跳舞的可以，唱歌的可以，会用电脑有微信就可以，守法公民都可以。
     
## 需求介绍：Oryx支持GB
* 地址: https://www.bilibili.com/video/BV1SL411K7KS
* 说明: Oryx面向鼠标编程，让每个人都能做音视频业务。不懂音视频的可以，懂音视频的也可以，种地的可以，撸网线的可以，剪电影的可以，背摄像机的也可以，跳舞的可以，唱歌的可以，会用电脑有微信就可以，守法公民都可以。

## 马景瑞：Oryx的SRT超清直播应用
* 地址: https://www.bilibili.com/video/BV1c341177e7
* 说明: Oryx面向鼠标编程，让每个人都能做音视频业务。不懂音视频的可以，懂音视频的也可以，种地的可以，撸网线的可以，剪电影的可以，背摄像机的也可以，跳舞的可以，唱歌的可以，会用电脑有微信就可以，守法公民都可以。

![](https://ossrs.net/gif/v1/sls.gif?site=ossrs.net&path=/lts/tutorial/zh/v6/oryx)


